# VideoSender

./: CMakeLists.txt  Jenkinsfile  NVMRVideoSender.pro  avahi.cpp  avahi.h  clientconnection.cpp  clientconnection.h  configurationserver.cpp  configurationserver.h  main.cpp  video-sender-rtsp-helper.c  videosender.cpp  videosender.h  videosender.service
avahi-dbus/: EntryGroupProxy.cpp  EntryGroupProxy.h  generate-classes.sh  org_freedesktop_Avahi_EntryGroupProxy.cpp  org_freedesktop_Avahi_EntryGroupProxy.h
debian/: changelog  control  copyright
design/: design.md  prototype.sh
